HelloWorld/force-app/main/default/objects/Customer__c/fields/DOB_Month__c.field-meta.xml
<CustomField>
    <fullName>DOB_Month__c</fullName>
    <formula>MONTH( DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>