HelloWorld/force-app/main/default/objects/Customer__c/fields/DOB_Year__c.field-meta.xml
<CustomField>
    <fullName>DOB_Year__c</fullName>
    <formula>YEAR( DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>