HelloWorld/force-app/main/default/objects/Customer__c/fields/Eligible_for_Travel__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Travel__c</fullName>
    <label>Eligible for Travel</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>