HelloWorld/force-app/main/default/objects/Customer__c/fields/PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card__c</fullName>
    <label>PAN Card</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>