HelloWorld/force-app/main/default/objects/Customer__c/fields/Required_documents__c.field-meta.xml
<CustomField>
    <fullName>Required_documents__c</fullName>
    <label>Required documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN card</fullName>
            </value>
            <value>
                <fullName>Aadhar card</fullName>
            </value>
            <value>
                <fullName>Electric bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>