HelloWorld/force-app/main/default/objects/Customer__c/fields/Voter_type__c.field-meta.xml
<CustomField>
    <fullName>Voter_type__c</fullName>
    <formula>IF( Age__c &gt;=18, &apos;Major&apos;, &apos;Minor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voter type</label>
    <type>Text</type>
</CustomField>