HelloWorld/force-app/main/default/objects/Customer__c/validationRules/Female_age_in_between_40_to_60_years.validationRule-meta.xml
<ValidationRule>
    <fullName>Female_age_in_between_40_to_60_years</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Gender__c ,&apos;Female&apos;), 
Age__c &gt;=40,
Age__c &lt;60
)</errorConditionFormula>
    <errorMessage>Female customers age should not be in between 40 to 60 years</errorMessage>
</ValidationRule>