HelloWorld/force-app/main/default/objects/Customer__c/validationRules/First_and_Last_name_should_not_in_char.validationRule-meta.xml
<ValidationRule>
    <fullName>First_and_Last_name_should_not_in_char</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
NOT(REGEX(  First_Name__c  , &quot;^[a-zA-Z0_]*$&quot;)),
NOT(REGEX(   Last_Name__c  , &quot;^[a-zA-Z0_]*$&quot;))
)</errorConditionFormula>
    <errorMessage>First and Last name should not contain special char and numbers</errorMessage>
</ValidationRule>