HelloWorld/force-app/main/default/objects/Customer__c/validationRules/Major_male_customers_are_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Major_male_customers_are_not_allowed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Age__c &gt;=18,
ISPICKVAL( Gender__c ,&apos;Male&apos;) 
)</errorConditionFormula>
    <errorMessage>Major male customers are not allowed</errorMessage>
</ValidationRule>