HelloWorld/force-app/main/default/objects/Customer__c/validationRules/PAN_card_is_mandatory_for_Agent_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_card_is_mandatory_for_Agent_profile</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 $Profile.Name = &apos;Agent&apos;,
ISBLANK( PAN_Card__c ) 
)</errorConditionFormula>
    <errorDisplayField>PAN_Card__c</errorDisplayField>
    <errorMessage>PAN No is required for Agent customer</errorMessage>
</ValidationRule>